# realtime-data-streaming-project

./: .dockerignore  .gitignore  README.md  README.vi.md  docker-compose.airflow3.yaml  docker-compose.kafka.yaml  docker-compose.spark.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  stop-pipeline.sh
airflow/: Dockerfile
airflow/dags/: kafka_stream.py
api-request/: main.py  pyproject.toml
api-request/src/: user_data_api.py  user_data_api_simple.py
api-request/src/api_request.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: airflow.cfg
images/: pipeline-architecture.drawio
script/: entrypoint.sh
spark/: Dockerfile  spark_stream.py
